Se agregaron las paginas de perfil con informacion de usuario y pedidos

--- a/categoria.html
+++ b/categoria.html
@@ -167,54 +167,66 @@
 
 
                 <div class="product-container col-12 col-md-10">
-                    <div class="card" style="max-width: 18rem;">
-                        <img src=" assets/images/productos/producto1a.webp" class="card-img-top img-fluid" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title mb-1">Air Max Pulse</h5>
-                            <p class="card-text text-body-secondary">Nike</p>
-                            <p class="card-text precio">$150.000</p>
+                    <a href="producto.html">
+                        <div class="card" style="max-width: 18rem;">
+                            <img src=" assets/images/productos/producto1a.webp" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title mb-1">Air Max Pulse</h5>
+                                <p class="card-text text-body-secondary">Nike</p>
+                                <p class="card-text precio">$150.000</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card" style="max-width: 18rem;">
-                        <img src=" assets/images/productos/producto1a.webp" class="card-img-top img-fluid" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title mb-1">Air Max Pulse</h5>
-                            <p class="card-text text-body-secondary">Nike</p>
-                            <p class="card-text precio">$150.000</p>
+                    </a>
+                    <a href="producto.html">
+                        <div class="card" style="max-width: 18rem;">
+                            <img src=" assets/images/productos/producto1a.webp" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title mb-1">Air Max Pulse</h5>
+                                <p class="card-text text-body-secondary">Nike</p>
+                                <p class="card-text precio">$150.000</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card" style="max-width: 18rem;">
-                        <img src=" assets/images/productos/producto1a.webp" class="card-img-top img-fluid" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title mb-1">Air Max Pulse</h5>
-                            <p class="card-text text-body-secondary">Nike</p>
-                            <p class="card-text precio">$150.000</p>
+                    </a>
+                    <a href="producto.html">
+                        <div class="card" style="max-width: 18rem;">
+                            <img src=" assets/images/productos/producto1a.webp" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title mb-1">Air Max Pulse</h5>
+                                <p class="card-text text-body-secondary">Nike</p>
+                                <p class="card-text precio">$150.000</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card" style="max-width: 18rem;">
-                        <img src=" assets/images/productos/producto1a.webp" class="card-img-top img-fluid" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title mb-1">Air Max Pulse</h5>
-                            <p class="card-text text-body-secondary">Nike</p>
-                            <p class="card-text precio">$150.000</p>
+                    </a>
+                    <a href="producto.html">
+                        <div class="card" style="max-width: 18rem;">
+                            <img src=" assets/images/productos/producto1a.webp" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title mb-1">Air Max Pulse</h5>
+                                <p class="card-text text-body-secondary">Nike</p>
+                                <p class="card-text precio">$150.000</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card" style="max-width: 18rem;">
-                        <img src=" assets/images/productos/producto1a.webp" class="card-img-top img-fluid" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title mb-1">Air Max Pulse</h5>
-                            <p class="card-text text-body-secondary">Nike</p>
-                            <p class="card-text precio">$150.000</p>
+                    </a>
+                    <a href="producto.html">
+                        <div class="card" style="max-width: 18rem;">
+                            <img src=" assets/images/productos/producto1a.webp" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title mb-1">Air Max Pulse</h5>
+                                <p class="card-text text-body-secondary">Nike</p>
+                                <p class="card-text precio">$150.000</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card" style="max-width: 18rem;">
-                        <img src=" assets/images/productos/producto1a.webp" class="card-img-top img-fluid" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title mb-1">Air Max Pulse</h5>
-                            <p class="card-text text-body-secondary">Nike</p>
-                            <p class="card-text precio">$150.000</p>
+                    </a>
+                    <a href="producto.html">
+                        <div class="card" style="max-width: 18rem;">
+                            <img src=" assets/images/productos/producto1a.webp" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title mb-1">Air Max Pulse</h5>
+                                <p class="card-text text-body-secondary">Nike</p>
+                                <p class="card-text precio">$150.000</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
 
                 </div>
             </div>
