--- a/producto.html
+++ b/producto.html
@@ -149,7 +149,9 @@
                             <button type="button mb-2" class="btn btn-outline-secondary">45</button>
                         </div>
                     </div>
-                    <button class="btn btn-dark mb-2">Agregar al carrito</button>
+                    <a href="carrito.html">
+                        <button class="btn btn-dark mb-2">Agregar al carrito</button>
+                    </a>
 
                     <div class="accordion accordion-flush" id="accordionFlushExample">
                         <div class="accordion-item">
