--- a/producto.html
+++ b/producto.html
@@ -64,7 +64,7 @@
                 </ul>
 
                 <ul class="navbar-nav me-5 mb-2 mb-lg-0 d-flex flex-row align-items-center gap-3">
-                    
+
                     <li class="nav-item shopping-cart">
                         <a href="carrito.html">
                             <i class="fa-solid fa-cart-shopping text-body-secondary"></i>
@@ -78,6 +78,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="login.html">Iniciar sesion</a></li>
                             <li><a class="dropdown-item" href="registro.html">Registro</a></li>
+                            <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
                         </ul>
                     </li>
                 </ul>
