--- a/direcciones.html
+++ b/direcciones.html
@@ -78,6 +78,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="login.html">Iniciar sesion</a></li>
                             <li><a class="dropdown-item" href="registro.html">Registro</a></li>
+                            <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -89,33 +90,137 @@
 
     <section>
         <div class="container">
-            <h1>Hola, Usurario</h1>
+            <h1>Hola, Usuario</h1>
             <div class="row mt-4">
-                <div class="col-12 col-md-3">
-                    <div class="btn-group-vertical" role="group" aria-label="Vertical button group">
+                <!-- Menu lateral -->
+                <div class="col-12 col-md-3 bg-light rounded">
+                    <div class="sidebar p-4 ">
                         <a href="perfil.html">
-                            <button type="button" class="btn btn-secondary">Datos personales</button>
+                            <div class="">Datos personales</div>
                         </a>
+                        <hr class="my-4" />
                         <a href="direcciones.html">
-                            <button type="button" class="btn btn-secondary">Direcciones</button>
+                            <div class="">Direcciones</div>
                         </a>
+                        <hr class="my-4" />
                         <a href="pedidos.html">
-                            <button type="button" class="btn btn-secondary">Pedidos</button>
+                            <div class="">Pedidos</div>
                         </a>
                     </div>
                 </div>
 
-                
-                
+                <div class="col-12 col-md-8">
+                    <h2>Mis Direcciones</h2>
+                    <div class="order-card row mt-4 pb-3 ms-3">
+                        <div class="card-body p-3">
+                            <!-- Single item -->
+                            <div class="row">
+                                <div class="col-lg-5 col-md-6 mb-4 mb-lg-0">
+                                    <!-- Data -->
+                                    <p><strong>Casa</strong></p>
+                                    <p>Avenida Bienaventurado 123</p>
+                                    <p>Concepcion</p>
+                                    <!-- Data -->
+                                </div>
+
+                                <div class="col-lg-2 col-md-3 mb-4 mb-lg-0">
+
+                                </div>
+
+                                <div class="col-lg-2 col-md-3 mb-4 mb-lg-0">
+                                    <div class="row">
+                                        <button class="btn btn-primary mb-2" data-bs-toggle="modal"
+                                            data-bs-target="#exampleModal">Editar</button>
+                                        <button class="btn btn-danger" data-bs-toggle="modal"
+                                            data-bs-target="#modalEliminar">Eliminar</button>
+                                        <!-- Modal Eliminar -->
+                                        <div class="modal fade" id="modalEliminar" tabindex="-1"
+                                            aria-labelledby="modalEliminar" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h1 class="modal-title fs-5" id="modalEliminar">Eliminar direccion
+                                                        </h1>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                            aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        Seguro desea eliminar la direccion?
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary"
+                                                            data-bs-dismiss="modal">Cancelar</button>
+                                                        <button type="button" class="btn btn-primary">Si, eliminar</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row p-4">
+                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar
+                            nueva direccion</button>
+
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Nueva direccion</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form>
+                                            <div class="mb-3">
+                                                <label for="calle" class="form-label">Calle</label>
+                                                <input type="text" class="form-control" id="calle"
+                                                    aria-describedby="calle">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="numero" class="form-label">Número</label>
+                                                <input type="text" class="form-control" id="numero"
+                                                    aria-describedby="numero">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="region" class="form-label">Región</label>
+                                                <input type="text" class="form-control" id="region"
+                                                    aria-describedby="region">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="comuna" class="form-label">Comuna</label>
+                                                <input type="text" class="form-control" id="comuna"
+                                                    aria-describedby="comuna">
+                                            </div>
+                                            <div class="mb-3 form-check">
+                                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                                <label class="form-check-label" for="exampleCheck1">Convertir en
+                                                    dirección por defecto</label>
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Cerrar</button>
+                                        <button type="button" class="btn btn-primary">Guardar</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+
+
                 </div>
             </div>
         </div>
     </section>
-
-
-
-
-
 
 
     <!-- Footer -->
