--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
 
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand pe-3 ms-5" href="#">
@@ -64,7 +63,7 @@
                 </ul>
 
                 <ul class="navbar-nav me-5 mb-2 mb-lg-0 d-flex flex-row align-items-center gap-3">
-                    
+
                     <li class="nav-item shopping-cart">
                         <a href="carrito.html">
                             <i class="fa-solid fa-cart-shopping text-body-secondary"></i>
@@ -78,6 +77,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="login.html">Iniciar sesion</a></li>
                             <li><a class="dropdown-item" href="registro.html">Registro</a></li>
+                            <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
                         </ul>
                     </li>
                 </ul>
