--- a/pedidos.html
+++ b/pedidos.html
@@ -146,7 +146,7 @@
                             <!-- Boton comprar de nuevo -->
                             <p class="text-start text-md-center">
                                 <a href="producto.html">    
-                                    <button class="btn btn-primary">Comprar de nuevo</button>
+                                    <button class="btn btn-dark">Comprar de nuevo</button>
                                 </a>
                             </p>
                             <!-- Boton comprar de nuevo -->
@@ -180,7 +180,7 @@
                             <!-- Boton comprar de nuevo -->
                             <p class="text-start text-md-center">
                                 <a href="producto.html">    
-                                    <button class="btn btn-primary">Comprar de nuevo</button>
+                                    <button class="btn btn-dark">Comprar de nuevo</button>
                                 </a>
                             </p>
                             <!-- Boton comprar de nuevoado -->
@@ -224,7 +224,7 @@
                             <!-- Boton comprar de nuevo -->
                             <p class="text-start text-md-center">
                                 <a href="producto.html">    
-                                    <button class="btn btn-primary">Comprar de nuevo</button>
+                                    <button class="btn btn-dark">Comprar de nuevo</button>
                                 </a>
                             </p>
                             <!-- Boton comprar de nuevo -->
