--- a/perfil.html
+++ b/perfil.html
@@ -139,7 +139,7 @@
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
                             <label class="form-check-label" for="exampleCheck1">Suscribete a nuestros correos</label>
                         </div>
-                        <button type="submit" class="btn btn-primary">Guardar cambios</button>
+                        <button type="submit" class="btn btn-dark">Guardar cambios</button>
                     </form>
                 </div>
             </div>
