agregado departamento a direccion

--- a/direcciones.html
+++ b/direcciones.html
@@ -189,6 +189,11 @@
                                                     aria-describedby="numero">
                                             </div>
                                             <div class="mb-3">
+                                                <label for="depto" class="form-label">Departamento</label>
+                                                <input type="text" class="form-control" id="depto"
+                                                    aria-describedby="depto">
+                                            </div>
+                                            <div class="mb-3">
                                                 <label for="region" class="form-label">Región</label>
                                                 <input type="text" class="form-control" id="region"
                                                     aria-describedby="region">
