--- a/admin.html
+++ b/admin.html
@@ -23,39 +23,23 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="text-align: right;">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link" href="admin.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Marcas
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="adidas.html">Adidas</a></li>
-                            <li><a class="dropdown-item" href="nike.html">Nike</a></li>
-                            <li><a class="dropdown-item" href="jordan.html">Jordan</a></li>
-                            <li><a class="dropdown-item" href="puma.html">Puma</a></li>
-                        </ul>
+                        <a class="nav-link" href="totalpedidos.html">Pedidos</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Categorías
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="lifestyle.html">Estilo de vida</a></li>
-                            <li><a class="dropdown-item" href="futbol.html">Futbol</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="totalusuarios.html">Usuarios</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-
+    <!-- Botón "Añadir Producto" -->
+    <a href="editar.html" class="btn btn-dark position-fixed top-0 end-0 mt-5 me-3">Añadir Producto</a>
 
 
 
