--- a/editar.html
+++ b/editar.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/3e6ff9a951.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/bootstrap-5.3.3-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/producto.css">
+    <link rel="stylesheet" href="assets/css/admin.css">
 </head>
 
 <body>
@@ -25,49 +25,16 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="text-align: right;">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link" href="admin.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="categoria.html">Ofertas</a>
+                        <a class="nav-link" href="totalpedidos.html">Pedidos</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Marcas
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="categoria.html">Adidas</a></li>
-                            <li><a class="dropdown-item" href="categoria.html">Nike</a></li>
-                            <li><a class="dropdown-item" href="categoria.html">Jordan</a></li>
-                            <li><a class="dropdown-item" href="categoria.html">Puma</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="totalusuarios.html">Usuarios</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Categorías
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="categoria.html">Estilo de vida</a></li>
-                            <li><a class="dropdown-item" href="categoria.html">Futbol</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex align-items-center">
-
-                    <li class="nav-item d-flex">
-                        <input class="form-control me-2 ms-4" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-secondary" type="submit">Search</button>
-                    </li>
-
-                    <li class="nav-item ms-4 me-4 shopping-cart">
-                        <a href="#">
-                            <i class="fa-solid fa-cart-shopping text-body-secondary"></i>
-                        </a>
-                    </li>
-
                 </ul>
             </div>
         </div>
