--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
         <!-- Título del formulario -->
         <h3 class="text-center mb-4">Inicio de Sesión</h3>
         <!-- Formulario de inicio de sesión -->
-        <form action="procesar_login.php" method="POST">
+        <form action="index.html" method="POST">
             <div class="mb-3">
                 <label for="correo" class="form-label">Correo Electrónico</label>
                 <input type="email" class="form-control" id="correo" name="correo" required>
@@ -52,4 +52,24 @@
             <div class="d-grid gap-2">
                 <button type="submit" class="btn btn-dark">Iniciar Sesión</button>
             </div>
-            <div
+        </form>
+    </div>
+    <!-- Footer -->
+    <footer>
+        <div class="container-fluid bg-body-secondary">
+
+            <div class="container footer-container">
+                <div class="footer-logos">
+                    <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
+                    <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
+                </div>
+                <p class="footer-text">© 2024 Nikedas Chile</p>
+            </div>
+
+        </div>
+    </footer>
+
+
+    <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+</body>
