--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                             <li><a class="dropdown-item" href="categoria.html">Futbol</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="admin.html">Panel Admin</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav ms-auto me-4 mb-2 mb-lg-0">
                     <li class="nav-item d-flex mx-auto">
