--- a/recuperar.html
+++ b/recuperar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de Sesión</title>
+    <title>Recuperar Contraseña</title>
     <link rel="stylesheet" href="assets/bootstrap-5.3.3-dist/css/bootstrap.css">
     <script src="https://kit.fontawesome.com/3e6ff9a951.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/admin.css">
@@ -38,43 +38,41 @@
     <!-- Contenido de la página -->
     <div class="container mt-5">
         <!-- Título del formulario -->
-        <h3 class="text-center mb-4">Inicio de Sesión</h3>
-        <!-- Formulario de inicio de sesión -->
+        <h3 class="text-center mb-4">Recuperar Contraseña</h3>
+        <!-- Formulario de recuperación de contraseña -->
         <form action="index.html" method="POST">
             <div class="mb-3">
                 <label for="correo" class="form-label">Correo Electrónico</label>
                 <input type="email" class="form-control" id="correo" name="correo" required>
             </div>
-            <div class="mb-3">
-                <label for="contraseña" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="contraseña" name="contraseña" required>
-            </div>
-            <!-- Enlace para restablecer contraseña -->
-            <div class="mb-3">
-                <a href="recuperar.html">¿Has olvidado tu contraseña?</a>
-            </div>
             <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-dark">Iniciar Sesión</button>
+                <button type="submit" class="btn btn-dark">Enviar Instrucciones</button>
             </div>
         </form>
-        </form>
-        </ /div>
-        <!-- Footer -->
-        <footer>
-            <div class="container-fluid bg-body-secondary">
-
-                <div class="container footer-container">
-                    <div class="footer-logos">
-                        <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
-                        <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
-                        <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
-                    </div>
-                    <p class="footer-text">© 2024 Nikedas Chile</p>
+    </div>
+    <!-- Footer -->
+    <footer>
+        <div class="container-fluid bg-body-secondary">
+            <div class="container footer-container">
+                <div class="footer-logos">
+                    <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
+                    <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
                 </div>
-
+                <p class="footer-text">© 2024 Nikedas Chile</p>
             </div>
-        </footer>
+        </div>
+    </footer>
 
-
-        <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+    <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
 </body>
+
+</html>
+            </div>
+        </div>
+    </footer>
+
+    <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+</body>
+
+</html>
