--- a/editar.html
+++ b/editar.html
@@ -35,6 +35,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="totalusuarios.html">Usuarios</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html">Panel Cliente</a>
+                    </li>
                 </ul>
             </div>
         </div>
