--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
                             <i class="fa-solid fa-user"></i>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="login.html">Iniciar sesion</a></li>
+                            <li><a class="dropdown-item" href="login.html">Iniciar sesión</a></li>
                             <li><a class="dropdown-item" href="registro.html">Registro</a></li>
                             <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
+                            <li><a class="dropdown-item" href="index.html">Cerrar sesión</a></li>
                         </ul>
                     </li>
                 </ul>
