--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand pe-3 ms-4" href="#">
+            <a class="navbar-brand pe-3 ms-5" href="#">
                 <img src="assets/images/logo.png" alt="Bootstrap" width="56">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -25,10 +25,63 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="registro.html">Registro</a>
+                        <a class="nav-link" aria-current="page" href="categoria.html">Ofertas</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Marcas
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="categoria.html">Adidas</a></li>
+                            <li><a class="dropdown-item" href="categoria.html">Nike</a></li>
+                            <li><a class="dropdown-item" href="categoria.html">Jordan</a></li>
+                            <li><a class="dropdown-item" href="categoria.html">Puma</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Categorías
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="categoria.html">Estilo de vida</a></li>
+                            <li><a class="dropdown-item" href="categoria.html">Futbol</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="admin.html">Panel Admin</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ms-auto me-4 mb-2 mb-lg-0">
+                    <li class="nav-item d-flex mx-auto">
+                        <input class="form-control me-2 ms-4" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-secondary" type="submit">Search</button>
+                    </li>
+
+                </ul>
+
+                <ul class="navbar-nav me-5 mb-2 mb-lg-0 d-flex flex-row align-items-center gap-3">
+
+                    <li class="nav-item shopping-cart">
+                        <a href="carrito.html">
+                            <i class="fa-solid fa-cart-shopping text-body-secondary"></i>
+                        </a>
+                    </li>
+
+                    <li class="nav-item dropstart profile">
+                        <a href="#" class="nav-link dropdown-toggle " role="button" data-bs-toggle="dropdown">
+                            <i class="fa-solid fa-user"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="login.html">Iniciar sesión</a></li>
+                            <li><a class="dropdown-item" href="registro.html">Registro</a></li>
+                            <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
+                            <li><a class="dropdown-item" href="index.html">Cerrar sesión</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
