--- a/producto.html
+++ b/producto.html
@@ -54,6 +54,9 @@
                             <li><a class="dropdown-item" href="categoria.html">Futbol</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="admin.html">Panel Admin</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav ms-auto me-4 mb-2 mb-lg-0">
                     <li class="nav-item d-flex mx-auto">
@@ -76,9 +79,10 @@
                             <i class="fa-solid fa-user"></i>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="login.html">Iniciar sesion</a></li>
+                            <li><a class="dropdown-item" href="login.html">Iniciar sesión</a></li>
                             <li><a class="dropdown-item" href="registro.html">Registro</a></li>
                             <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
+                            <li><a class="dropdown-item" href="index.html">Cerrar sesión</a></li>
                         </ul>
                     </li>
                 </ul>
