--- a/usuarios.html
+++ b/usuarios.html
@@ -14,7 +14,6 @@
 <body>
 
     <!-- Navbar -->
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand pe-3 ms-4" href="#">
@@ -35,6 +34,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="totalusuarios.html">Usuarios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html">Panel Cliente</a>
                     </li>
                 </ul>
             </div>
